deployment/reverse-proxy-tls/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend
                  timeout: 5.00s
                # typed_per_filter_config:
                #   envoy.filters.http.grpc_http1_reverse_bridge:
                #     "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute
                #     disabled: true
          http_filters:
          - name: envoy.filters.http.grpc_http1_reverse_bridge
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
              content_type: application/grpc+proto
              withhold_grpc_frames: true
          - name: envoy.filters.http.router
            typed_config: {}
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # The following self-signed certificate pair is generated using:
            # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
            #
            # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
            # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
            #
            # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
            # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIGeDCCBOCgAwIBAgIQMUkxfEd6bEOAifeF4UsVPDANBgkqhkiG9w0BAQwFADBZ
[...]
                  yGtXfEDDNnTdeX2uVzqb1qK/kSiprYgE/sDIIg==
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN RSA PRIVATE KEY-----
                  MIIEowIBAAKCAQEAqtica3tNg+Dc84VIcPFny/7OQ0zC2LieJEzdSkFgozPD7KeW
[...]
                  hCTZefZW7VF5j87Wvao6Y77Ybext0x8lTrvXzDGikKVIKdHikWzy
                  -----END RSA PRIVATE KEY-----
            alpn_protocols: [h2]  # 提供侦听器应公开的 ALPN 

  clusters:
  - name: backend
    connect_timeout: 5.00s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # 因为在容器里 所以地址不能用127.0.0.1
                address: origin # 源站地址
                port_value: 80
